[tool.poetry]
name = "renutil"
version = "1.13.0"
description = "A toolkit for managing Ren'Py instances via the command line"
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/renutil"
homepage = "https://github.com/kobaltcore/renutil"

[tool.poetry.scripts]
renutil = "renutil.renutil:cli"

[tool.poetry.dependencies]
python = "^3.6"
lxml = "^4.6.1"
tqdm = "^4.51.0"
click = "^7.1.2"
requests = "^2.24.0"
semantic-version = "^2.8.5"
rich = "^9.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
