[tool.poetry]
name = "renutil"
version = "1.15.4"
description = "A toolkit for managing Ren'Py instances via the command line"
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/renutil"
homepage = "https://github.com/kobaltcore/renutil"

[tool.poetry.scripts]
renutil = "renutil.renutil:cli"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.6.3"
tqdm = "^4.61.0"
click = "^8.0.1"
requests = "^2.25.1"
semantic-version = "^2.8.5"
rich = "^10.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pytest = "^6.0.1"
black = "^20.8b1"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
