[tool.poetry]
name = "renutil"
version = "1.16.0"
description = "A toolkit for managing Ren'Py instances via the command line"
authors = ["CobaltCore <cobaltcore@yandex.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kobaltcore/renutil"
homepage = "https://github.com/kobaltcore/renutil"

[tool.poetry.scripts]
renutil = "renutil.renutil:cli"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.8.0"
tqdm = "^4.64.0"
click = "^8.1.3"
requests = "^2.27.1"
semantic-version = "^2.9.0"
rich = "^12.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
